--- a/r_package/bestcost/testing/testing_Rpackage.Rmd
+++ b/r_package/bestcost/testing/testing_Rpackage.Rmd
@@ -53,6 +53,7 @@ if(!"bestcost" %in% installed.packages()[, "Package"]){
 }
 
 library(bestcost)
+devtools::load_all() # loads all functions in {bestcost}
 ```
 
 ```{r Useful variables}
@@ -924,6 +925,6 @@ impact_mortality <-
 
 ```{r eval=FALSE, include=FALSE}
 write.csv2(lifetable_airqplus,
-            "testing/output/lifetable_airqplus_2019_ch.csv", 
+            "testing/output/WITH get_pop_diff() lifetable_airqplus_2019_ch.csv", 
             row.names = FALSE)
 ```
