Correction small error in get_pop_diff()

--- a/r_package/bestcost/testing/testing_Rpackage.Rmd
+++ b/r_package/bestcost/testing/testing_Rpackage.Rmd
@@ -53,6 +53,7 @@ if(!"bestcost" %in% installed.packages()[, "Package"]){
 }
 
 library(bestcost)
+devtools::load_all() # loads all functions in {bestcost}
 ```
 
 ```{r Useful variables}
